--- a/flex_marketplace/Scarb.toml
+++ b/flex_marketplace/Scarb.toml
@@ -6,3 +6,4 @@ version = "0.1.0"
 
 [dependencies]
 snforge_std = { git = "https://github.com/foundry-rs/starknet-foundry.git", tag = "v0.11.0" }
+openzeppelin = { git = "https://github.com/openzeppelin/cairo-contracts", tag = "v0.8.0" }
