--- a/flex_marketplace/Scarb.toml
+++ b/flex_marketplace/Scarb.toml
@@ -1,9 +1,12 @@
 [package]
 name = "flex"
 version = "0.1.0"
-
-# See more keys and their definitions at https://docs.swmansion.com/scarb/docs/reference/manifest.html
+edition = "2023_01"
 
 [dependencies]
-snforge_std = { git = "https://github.com/foundry-rs/starknet-foundry.git", tag = "v0.11.0" }
+starknet = "2.4.0"
+snforge_std = { git = "https://github.com/foundry-rs/starknet-foundry.git", tag = "v0.13.0" }
 openzeppelin = { git = "https://github.com/openzeppelin/cairo-contracts", tag = "v0.8.0" }
+
+[scripts]
+test = "snforge test"
