--- a/flex_marketplace/Scarb.toml
+++ b/flex_marketplace/Scarb.toml
@@ -10,3 +10,8 @@ openzeppelin = { git = "https://github.com/openzeppelin/cairo-contracts", tag = 
 
 [scripts]
 test = "snforge test"
+
+[[target.starknet-contract]]
+allowed-libfuncs-list.name = "audited"
+sierra = true
+casm = true
