--- a/deployment-script/package.json
+++ b/deployment-script/package.json
@@ -2,13 +2,17 @@
 	"dependencies": {
 		"dotenv": "^16.4.5",
 		"fs": "^0.0.1-security",
-		"starknet": "^5.24.3"
+		"starknet": "^5.24.3",
+		"ts-node": "^10.9.2",
+		"typescript": "^5.3.3"
 	},
 	"devDependencies": {
 		"@types/node": "^20.11.19"
 	},
 	"scripts": {
-		"start": "tsc && node dist/deployment.js"
+		"deploy": "scarb build && ts-node ./deployment.ts",
+		"marketplace-deploy": "scarb build && ts-node ./deploymentMarketplace.ts",
+		"signaturechecker-deploy": "scarb build && ts-node ./deploymentSignatureChecker.ts"
 	},
 	"license": "MIT"
 }
