--- a/flex_marketplace/Scarb.toml
+++ b/flex_marketplace/Scarb.toml
@@ -7,6 +7,7 @@ edition = "2023_01"
 starknet = "2.4.3"
 snforge_std = { git = "https://github.com/foundry-rs/starknet-foundry.git", tag = "v0.14.0" }
 openzeppelin = { git = "https://github.com/openzeppelin/cairo-contracts", tag = "v0.8.0"  }
+alexandria_storage = { git = "https://github.com/keep-starknet-strange/alexandria.git", tag = "cairo-v2.3.0-rc0" }
 
 [scripts]
 test = "snforge test"
