Update deployment script and add new transfer manager

--- a/deployment-script/package.json
+++ b/deployment-script/package.json
@@ -12,6 +12,7 @@
 	"scripts": {
 		"deploy": "scarb build && ts-node ./deployment.ts",
 		"marketplace-deploy": "scarb build && ts-node ./deploymentMarketplace.ts",
+		"transfermanager1155-deploy": "scarb build && ts-node ./deploymentTransferManager1155.ts",
 		"signaturechecker-deploy": "scarb build && ts-node ./deploymentSignatureChecker.ts"
 	},
 	"license": "MIT"
