--- a/marketplace/Scarb.toml
+++ b/marketplace/Scarb.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2023_01"
 
 [dependencies]
-starknet = ">=2.5.3"
+starknet = "2.6.3"
 snforge_std = { git = "https://github.com/foundry-rs/starknet-foundry.git", tag = "v0.14.0" }
 openzeppelin = { git = "https://github.com/openzeppelin/cairo-contracts", tag = "v0.10.0"  }
 alexandria_storage = { git = "https://github.com/keep-starknet-strange/alexandria.git", tag = "cairo-v2.3.0-rc0" }
