--- a/marketplace/scripts/package.json
+++ b/marketplace/scripts/package.json
@@ -1,8 +1,12 @@
 {
   "dependencies": {
+    "@tsconfig/node20": "^20.1.2",
     "@types/node": "^22.4.2",
     "dotenv": "^16.4.5",
     "fs": "^0.0.1-security",
-    "starknet": "^6.11.0"
+    "node": "^22.7.0",
+    "starknet": "^6.11.0",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.2.2"
   }
 }
