--- a/openedition/Scarb.toml
+++ b/openedition/Scarb.toml
@@ -5,7 +5,7 @@ edition = "2023_01"
 
 [dependencies]
 starknet = "2.6.3"
-snforge_std = { git = "https://github.com/foundry-rs/starknet-foundry.git", tag = "v0.14.0" }
+snforge_std = { git = "https://github.com/foundry-rs/starknet-foundry.git", tag = "v0.22.0" }
 openzeppelin = { git = "https://github.com/openzeppelin/cairo-contracts", tag = "v0.10.0"  }
 alexandria_storage = { git = "https://github.com/keep-starknet-strange/alexandria.git", tag = "cairo-v2.3.0-rc0" }
 
@@ -13,6 +13,7 @@ alexandria_storage = { git = "https://github.com/keep-starknet-strange/alexandri
 test = "snforge test"
 
 [[target.starknet-contract]]
+build-external-contracts = ["openzeppelin::presets::account::Account", "openzeppelin::presets::erc20::ERC20"]
 allowed-libfuncs-list.name = "audited"
 sierra = true
 casm = true
