add comment to the set up provider function

--- a/marketplace/scripts/tsconfig.json
+++ b/marketplace/scripts/tsconfig.json
@@ -1,4 +1,5 @@
 {
   "extends": "./node_modules/@tsconfig/node20/tsconfig.json",
-  "include": ["scripts/**/*"]
+  "include": ["scripts/**/*"],
+  "files": []
 }
