--- a/openedition/Scarb.toml
+++ b/openedition/Scarb.toml
@@ -13,7 +13,7 @@ alexandria_storage = { git = "https://github.com/keep-starknet-strange/alexandri
 test = "snforge test"
 
 [[target.starknet-contract]]
-build-external-contracts = ["openzeppelin::presets::account::Account", "openzeppelin::presets::erc20::ERC20"]
+build-external-contracts = ["openzeppelin::presets::account::Account", "openzeppelin::presets::erc20::ERC20", "openzeppelin::presets::erc721::ERC721"]
 allowed-libfuncs-list.name = "audited"
 sierra = true
 casm = true
