--- a/experimental/erc_7765_rwa_integration/Scarb.toml
+++ b/experimental/erc_7765_rwa_integration/Scarb.toml
@@ -6,11 +6,11 @@ edition = "2024_07"
 # See more keys and their definitions at https://docs.swmansion.com/scarb/docs/reference/manifest.html
 
 [dependencies]
-starknet = ">2.8.0"
+starknet = "2.6.3"
 openzeppelin = { git = "https://github.com/openzeppelin/cairo-contracts", tag = "v0.17.0"  }
 snforge_std = { git = "https://github.com/foundry-rs/starknet-foundry.git", tag = "v0.14.0" }
+alexandria_storage = { git = "https://github.com/keep-starknet-strange/alexandria.git", tag = "cairo-v2.3.0-rc0" }
 
-[dev-dependencies]
 
 [scripts]
 test = "snforge test"
