--- a/flex_haus/Scarb.toml
+++ b/flex_haus/Scarb.toml
@@ -6,7 +6,11 @@ edition = "2023_01"
 [dependencies]
 starknet = ">2.8.0"
 openzeppelin = { git = "https://github.com/openzeppelin/cairo-contracts", tag = "v0.17.0"  }
-snforge_std = { git = "https://github.com/foundry-rs/foundry.git", tag = "0.32.0" }
+# snforge_std = { git = "https://github.com/foundry-rs/starknet-foundry.git", tag = "v0.32.0" }
+
+[dev-dependencies]
+snforge_std = { git = "https://github.com/foundry-rs/starknet-foundry", tag = "v0.32.0" }
+assert_macros = "2.8.4"
 
 [scripts]
 test = "snforge test"
