--- a/experimental/erc_1523_insurance_policies/Scarb.toml
+++ b/experimental/erc_1523_insurance_policies/Scarb.toml
@@ -7,6 +7,7 @@ edition = "2023_11"
 
 [dependencies]
 starknet = "2.8.2"
+openzeppelin = { git = "https://github.com/openzeppelin/cairo-contracts", tag="v0.16.0" }
 
 [dev-dependencies]
 snforge_std = { git = "https://github.com/foundry-rs/starknet-foundry", tag = "v0.27.0" }
