--- a/experimental/erc_4907_rental_nft/Scarb.toml
+++ b/experimental/erc_4907_rental_nft/Scarb.toml
@@ -6,14 +6,20 @@ edition = "2024_07"
 # See more keys and their definitions at https://docs.swmansion.com/scarb/docs/reference/manifest.html
 
 [dependencies]
-starknet = "2.9.2"
+starknet = "2.8.4"
+openzeppelin_access = "0.18.0"
+openzeppelin_introspection = "0.18.0"
+openzeppelin_token = "0.18.0"
 
 [dev-dependencies]
-snforge_std = { git = "https://github.com/foundry-rs/starknet-foundry", tag = "v0.34.0" }
-assert_macros = "2.9.2"
+assert_macros = "2.8.4"
+openzeppelin_utils = "0.18.0"
+openzeppelin_testing = "0.18.0"
+snforge_std = "0.31.0"
+
+[lib]
 
 [[target.starknet-contract]]
-sierra = true
 
 [scripts]
 test = "snforge test"
