--- a/experimental/erc_6105_no_intermediary_nft_trading_protocol/Scarb.toml
+++ b/experimental/erc_6105_no_intermediary_nft_trading_protocol/Scarb.toml
@@ -7,9 +7,13 @@ edition = "2023_11"
 
 [dependencies]
 starknet = "2.8.2"
+openzeppelin_introspection = "0.20.0"
+openzeppelin_token = "0.20.0"
 
 [dev-dependencies]
-snforge_std = { git = "https://github.com/foundry-rs/starknet-foundry", tag = "v0.27.0" }
+snforge_std = { git = "https://github.com/foundry-rs/starknet-foundry", tag = "v0.34.0" }
+openzeppelin_utils = "0.20.0"
+openzeppelin_testing = "0.20.0"
 
 [[target.starknet-contract]]
 sierra = true
