--- a/experimental/erc_6105_no_intermediary_nft_trading_protocol/Scarb.toml
+++ b/experimental/erc_6105_no_intermediary_nft_trading_protocol/Scarb.toml
@@ -11,6 +11,13 @@ openzeppelin_introspection = "0.17.0"
 openzeppelin_token = "0.17.0"
 
 [dev-dependencies]
+assert_macros = "2.8.2"
+openzeppelin_utils = "0.17.0"
+openzeppelin_testing = "0.17.0"
+snforge_std = '0.30.0'
 
 [[target.starknet-contract]]
 sierra = true
+
+[scripts]
+test = "snforge test"
