--- a/experimental/erc_5006_rental_nft/Scarb.toml
+++ b/experimental/erc_5006_rental_nft/Scarb.toml
@@ -1,15 +1,18 @@
 [package]
-name = "erc_5006_rental_nft"
+name = "erc5006_cairo"
 version = "0.1.0"
-edition = "2023_11"
+edition = "2024_07"
 
 # See more keys and their definitions at https://docs.swmansion.com/scarb/docs/reference/manifest.html
 
 [dependencies]
-starknet = "2.8.2"
+starknet = "2.9.2"
+openzeppelin_introspection = "0.20.0"
+openzeppelin_token = "0.20.0"
 
 [dev-dependencies]
-snforge_std = { git = "https://github.com/foundry-rs/starknet-foundry", tag = "v0.27.0" }
+snforge_std = { git = "https://github.com/foundry-rs/starknet-foundry", tag = "v0.34.0" }
+assert_macros = "2.9.2"
 
 [[target.starknet-contract]]
 sierra = true
