--- a/flex_haus/Scarb.toml
+++ b/flex_haus/Scarb.toml
@@ -9,7 +9,7 @@ openzeppelin = { git = "https://github.com/openzeppelin/cairo-contracts", tag = 
 # snforge_std = { git = "https://github.com/foundry-rs/starknet-foundry.git", tag = "v0.32.0" }
 
 [dev-dependencies]
-snforge_std = { git = "https://github.com/foundry-rs/starknet-foundry", tag = "v0.32.0" }
+#snforge_std = { git = "https://github.com/foundry-rs/starknet-foundry", tag = "v0.32.0" }
 assert_macros = "2.8.4"
 
 [scripts]
