--- a/flex_haus/Scarb.toml
+++ b/flex_haus/Scarb.toml
@@ -4,13 +4,12 @@ version = "0.1.0"
 edition = "2023_01"
 
 [dependencies]
-starknet = ">2.8.0"
+starknet = "2.8.2"
 openzeppelin = { git = "https://github.com/openzeppelin/cairo-contracts", tag = "v0.17.0"  }
-# snforge_std = { git = "https://github.com/foundry-rs/starknet-foundry.git", tag = "v0.32.0" }
 
 [dev-dependencies]
-#snforge_std = { git = "https://github.com/foundry-rs/starknet-foundry", tag = "v0.32.0" }
-assert_macros = "2.8.4"
+snforge_std = { git = "https://github.com/foundry-rs/starknet-foundry", tag = "v0.32.0" }
+assert_macros = "2.8.2"
 
 [scripts]
 test = "snforge test"
