--- a/base64_nft/Scarb.toml
+++ b/base64_nft/Scarb.toml
@@ -5,9 +5,13 @@ edition = "2024_07"
 
 # See more keys and their definitions at https://docs.swmansion.com/scarb/docs/reference/manifest.html
 
+[scripts]
+test = "snforge test"
+
 [dependencies]
 starknet = ">=2.9.4"
 openzeppelin = { git = "https://github.com/openzeppelin/cairo-contracts", tag = "v1.0.0"  }
+snforge_std = { git = "https://github.com/foundry-rs/starknet-foundry.git", tag = "v0.35.0" }
 
 [[target.starknet-contract]]
 sierra = true
